# dietwise

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  deploy-backend.yml  deploy-frontend.yml  frontend.yml
api/: .gitignore  alembic.ini  fly.toml  gunicorn.conf.py  pyproject.toml  requirements.txt
api/.claude/: CLAUDE.md
api/alembic/: env.py
api/alembic/versions/: 06b1d06bfb97_remove_has_paid_from_users.py  0d196d12cd57_add_terms_accepted_at_to_users.py  29bd1b08a18d_add_user_api_keys_and_preferences.py  386492be88b0_add_user_approval_fields.py  3a9e14cfc7b3_add_payment_and_trial_fields_to_users_.py  41dc7094e626_add_saved_recipes_table.py  5d827c80ffc6_remove_free_trial_ends_at_from_users.py  6c04c50307f1_widen_provider_support_to_8_llm_.py  84a37684f0bb_check_database.py  8cbb7810e66b_add_ingredienti_field_to_meals_table.py  a4bb3ba2cc9b_add_macro_columns_to_meals.py  c26db5a9ab70_add_sex_field_to_user_settings.py  c2b6586ec79a_add_age_field_to_user_settings.py  f080d4881eb3_add_missing_check_constraints_on_meal_.py  f7c2d2e1cc98_add_missing_check_constraints_on_meals_.py  fa70e8b10560_update_database_to_baml_data_structure.py  ff39b099730f_add_missing_positive_quantity_check_.py
api/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
api/app/api/v1/: __init__.py  admin.py  api_keys.py  diet.py  meal.py  recipe.py  router.py  settings.py  users.py
api/app/auth/: __init__.py  dependencies.py  supabase_auth.py
api/app/middleware/: __init__.py  logging.py  rate_limiting.py  security.py
api/app/models/: __init__.py  api_key.py  base.py  diet.py
api/app/repositories/: __init__.py  api_key_repository.py  base_repository.py  diet_repository.py  meal_repository.py  saved_recipe_repository.py  user_repository.py
api/app/schemas/: __init__.py  api_key.py  diet.py  saved_recipe.py
api/app/services/: __init__.py  api_key_service.py  api_key_validation_service.py  baml_client_factory.py  diet_service.py  encryption_service.py  key_rotation_service.py  meal_service.py  nutrition_calculator.py  package_sizing.py  user_service.py
api/app/utils/: __init__.py  llm_providers.py  url_safety.py
api/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
api/baml_src/: clients.baml  diet.baml  test_diet.baml
api/docker/: .dockerignore  Dockerfile
api/scripts/: rotate_encryption_key.py
api/tests/: conftest.py  test_nutrition_calculator.py  test_package_sizing.py
frontend/: README.md  angular.json  package-lock.json  package.json  vercel.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/auth/accept-terms/: accept-terms.component.html  accept-terms.component.ts
frontend/src/app/auth/login/: login.component.css  login.component.html  login.component.spec.ts  login.component.ts
frontend/src/app/auth/pending-approval/: pending-approval.component.html  pending-approval.component.ts
frontend/src/app/components/dashboard/: dashboard.component.html  dashboard.component.ts
frontend/src/app/components/recipes/: recipes.component.ts
frontend/src/app/components/settings/: settings.component.css  settings.component.html  settings.component.spec.ts  settings.component.ts
frontend/src/app/components/weekly/: weekly.component.css  weekly.component.spec.ts  weekly.component.ts
frontend/src/app/components/weekly/recipe-details/: recipe-details.component.css  recipe-details.component.html
frontend/src/app/components/weekly/weekly-details/: weekly-details.component.html  weekly-details.component.spec.ts  weekly-details.component.ts
frontend/src/app/guard/: auth.guard.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/models/: api-key.types.ts  diet.types.ts  llm-error.types.ts  recipe.types.ts  user-settings.types.ts  user.types.ts
frontend/src/app/pages/dashboard/: dashboard.component.html  dashboard.component.spec.ts  dashboard.component.ts
frontend/src/app/pages/recipes/: recipes.component.html  recipes.component.ts
frontend/src/app/pages/settings/: settings.component.html  settings.component.spec.ts  settings.component.ts
frontend/src/app/pages/settings/byok-settings/: byok-settings.component.html  byok-settings.component.ts
frontend/src/app/pages/weekly/: weekly.component.html  weekly.component.spec.ts  weekly.component.ts
frontend/src/app/services/: api-key.service.ts  auth-callback.component.ts  auth.service.ts  cost-estimate.service.ts  diet.service.ts  llm-error.service.ts  meal.service.ts  recipe.service.ts  request-cache.ts  settings.service.ts  supabase.service.ts  user.service.ts
frontend/src/app/shared/: nav-item.ts
frontend/src/app/shared/bottom-tab-bar/: bottom-tab-bar.component.html  bottom-tab-bar.component.spec.ts  bottom-tab-bar.component.ts
frontend/src/app/shared/cost-badge/: cost-badge.component.ts
frontend/src/app/shared/editable-select/: editable-select.component.ts
frontend/src/app/shared/grocery-list-sheet/: grocery-list-sheet.ts
frontend/src/app/shared/layout/: layout.component.html  layout.component.spec.ts  layout.component.ts
frontend/src/app/shared/llm-error-toast/: llm-error-toast.component.ts
frontend/src/app/shared/modify-diet-sheet/: modify-diet-sheet.ts
frontend/src/app/shared/page-header/: page-header.component.html  page-header.component.spec.ts  page-header.component.ts
frontend/src/app/shared/recipe-detail-sheet/: recipe-detail-sheet.ts
frontend/src/app/shared/sidebar/: sidebar.component.css  sidebar.component.html  sidebar.component.spec.ts  sidebar.component.ts
frontend/src/assets/terms_of_condition/: privacy.html  terms.html
frontend/src/environments/: environment.model.ts  environment.prod.ts  environment.ts
(+7 files in other folders)
